2000-12-26  Thomas E. Dickey  <dickey@clark.net>

	* user/copy.man: omit dot-files
	remove comment about Apollo...

	* src/copy/src/copy.c: add -z option
	ooh: EVIL 'gets()' function (morons)

	* src/copy/src/copy.c:
	changes to make this more useful for mirroring (add -p option, make
	verboseness less for directory and integrate -u/-U)

	* user/copy.man: add -p option

	* aclocal.m4: resync with my-autoconf

2000-07-21  Thomas E. Dickey  <dickey@clark.net>

	* src/checkup/src/checkup.c:
	mods to support 'checkup -o' with $SCCS_VAULT

2000-01-24  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: resync with my-autoconf

	* src/checkup/src/checkup.c: use DirentT and Stat_t

1999-11-30  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: update for OS/2

1999-06-27  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/test/case1.ref: add SCCS test-case

	* src/link2rcs/test/case2.ref: add SCCS-test-case

	* src/link2rcs/src/link2rcs.c:
	treat SCCS directories like RCS: make links to them

	* src/link2rcs/test/run_test.sh: add SCCS test-case

	* src/copy/src/copy.c, src/checkup/src/checkup.c, src/checkout/src/rcsget.c, src/checkout/src/checkout.c, src/checkin/src/rcsput.c, src/checkin/src/checkin.c, src/baseline/src/baseline.c:
	signed/unsigned-nits

1999-01-15  Thomas E. Dickey  <dickey@clark.net>

	* src/copy/src/copy.c:
	fix so I can copy files that begin with a "~" (if I read it from the
	directory entry I know it doesn't want to be expanded).
	also, flush stderr/stdout around the warnings (otherwise IRIX got all of
	the stderr's out before the stdout's)

1998-12-09  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf

1998-12-06  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/src/link2rcs.c:
	fix the case where we have symbolic links to a directory, by copying the
	link rather than trying to make directories.  I ran into this by having
	made links to ".", to resolve an include-path problem.  When trying to